# InvoiceForge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RESEARCH.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: __init__.py  config.py  logging_config.py  main.py
app/api/: dependencies.py  ui_routes.py
app/api/v1/: invoices.py  router.py
app/cli/: __init__.py  main.py
app/core/: __init__.py  pipeline.py
app/core/extraction/: __init__.py  invoice2data_extractor.py  llm_extractor.py  ocr_extractor.py  pdf_extractor.py  xml_extractor.py
app/core/generation/: __init__.py  cii_generator.py  pdf_renderer.py  ubl_generator.py  zugferd_generator.py
app/core/storage/: __init__.py  local_storage.py  webdav_storage.py
app/core/validation/: __init__.py  kosit_client.py  schema_manager.py  schematron_validator.py  validator.py  xsd_validator.py
app/db/: models.py  service.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 001_initial_schema.py
app/models/: __init__.py  invoice.py
app/worker/: settings.py  tasks.py
scripts/: download_schemas.sh
tests/: conftest.py  test_api.py  test_config.py  test_models.py  test_phase3.py  test_phase4.py  test_phases_5_10.py  test_pipeline.py  test_ubl_generator.py
ui/: streamlit_app.py
ui/static/css/: style.css
ui/templates/: base.html  convert.html  dashboard.html  extract.html  invoice.html  validate.html
ui/templates/partials/: result.html
