[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invoiceforge"
version = "0.1.0"
description = "German E-Rechnung converter – ZUGFeRD & XRechnung from multiple inputs"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "InvoiceForge Contributors" },
]
keywords = ["e-rechnung", "xrechnung", "zugferd", "factur-x", "invoice", "en16931"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    # Web framework
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    # Data validation
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    # Database
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    # E-Invoice libraries
    "drafthorse>=2025.1,<2026",
    "factur-x>=3.15,<4",
    # PDF processing
    "pdfplumber>=0.11,<1",
    "weasyprint>=63,<64",
    # Templates
    "jinja2>=3.1,<4",
    # Background jobs
    "arq>=0.26,<1",
    # HTTP client (WebDAV, etc.)
    "httpx>=0.28,<1",
    # XML processing
    "lxml>=5.3,<6",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3,<1",
    "pillow>=11,<12",
]
llm = [
    "anthropic>=0.42,<1",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6,<7",
    "httpx>=0.28,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pre-commit>=4,<5",
]

[project.scripts]
invoiceforge = "app.cli.main:cli"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
